--- a/expe.tex
+++ b/expe.tex
@@ -90,7 +90,7 @@ from the numerically predicted results, which were moreover sensitive to subtle 
 
 %}}}
 
-\section{Preaparation of the titanium dioxide microspheres}
+\section{Preparation of the titanium dioxide microspheres}
 \paragraph{Fabrication through the spray-dry technique}%{{{
 The collaboration with the laboratory of Dr. Patrick Mounaix in France %% Todo reference to Patrick's group somehow, and mention Oleg Mitrofanow (here, or later)
 provided us with high-permittivity TiO$_{2}$ spheres with the sizes from 30 to 100 $\upmu$m, which were examined by the terahertz spectroscopy as dielectric resonators, and possible constituents of a metamaterial with a negative effective permeability.
