--- a/result.tex
+++ b/result.tex
@@ -398,7 +398,7 @@ The frequency of the electric resonance is influenced by the radius $\rho_c$ of 
 \end{tabular}
 \end{figure}
 
-By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. This is the conventional approach to design a metamaterial with a negative index of refraction; applying it to the electro-magnetic resonator leads to an array of independent, nonconnected elements, which may be an advantage over embedding SRRs in a  wire array. One of the means of tuning the  antiparallel electric resonance frequency is to divide the central bar by an \textit{inner} capacitor as shown in Fig. \ref{fg_SRR_types2}b. 
+By optimizing the structure geometry, the resonances can be tuned against each other so that the regions of $\eeff(f) < 0$ and $\meff(f) < 0$ overlap. This is the conventional approach to design a metamaterial with a negative index of refraction; applying it to the electro-magnetic resonator leads to an array of independent, nonconnected elements, which may be an advantage over embedding SRRs in a wire array. One of the means of tuning the antiparallel electric resonance frequency is to divide the central bar by an \textit{inner} capacitor as shown in Fig. \ref{fg_SRR_types2}b. 
 
 For the inner capacitor being relatively small, with radius $\rho_c = 6$ $\upmu$m, the electric resonance is located around 1150 GHz, and it shifts down to 940 GHz when $\rho_c$ is increased to 8 $\upmu$m. On the contrary, the magnetic resonance is virtually independent of $\rho_c$ and remains close to 800 GHz. Both individual resonances can be clearly identified as points of zero transmission and as corresponding steep, but still continuous, drops in the refractive index (red and light green curves in Fig. \ref{fg_emSRR_icr}).  For $\rho_c \leq 8$ $\upmu$m, the resonances are separated by a photonic band, indicating that the regions of  $\eeff(f) < 0$ and $\meff(f) < 0$ do not overlap. 
 
@@ -457,7 +457,13 @@ The next plot for $\rho_c=8$ $\upmu$m was not chosen randomly, since for this in
 \FloatBarrier %====================================================================================================
 \section{Dielectric spheres} % references to ->			
 \paragraph{Mie resonances}%{{{
-Electric and magnetic resonances % TODO
+Already in Eq. (\ref{}) it was assumed that at higher frequencies, there is no difference in the effect of conduction and polarisation currents. The current conducted around a split-ring resonator has a direct analogy in the polarisation current circulating around an axis of a dielectric sphere. The capacitor in the SRR is then replaced by the distributed capacitance of the whole dielectric. The magnetic dipole moment created by the polarisation current goes through the axis of the sphere. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere, and in general, decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
+
+The second resonance has an electric dipole moment. It is similar to the magnetic one except for that now the magnetic field circulates around the axis of the sphere, and the polarisation current forms a dipole. Although the topology of both resonances is the same, the resonance frequency of the magnetic one is lower, since the electric field is then almost entirely confined to the dielectric volume, whereas for the electric resonance, most of the streamlines of the electric field pass through the surrounding air
+
+Infinite number of the higher-order resonances exist, corresponding to a subset of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments, and do not couple to the electromagnetic wave. The theory of electromagnetic resonances in dielectric spheres was developed by Gustav Mie % in 
+
+
 %% TODO back reference to expe.tex:74
 %% todo resonators used in microwave technology for decades, find cite?
 %% todo cite vendik, Zhao etc. from the directory
