--- a/fdphd.bib
+++ b/fdphd.bib
@@ -2607,6 +2607,24 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   publisher={Nature Publishing Group}
 }
 /*}}}*/
+@article{wang2010composite,
+  title={Composite left/right-handed stacked hole arrays at submillimeter wavelengths},
+  author={Wang, Shengxiang and Garet, Fr{\'e}d{\'e}ric and Blary, Karine and Cro{\"e}nne, Charles and Lheurette, Eric and Coutaz, Jean-Louis and Lippens, Didier},
+  journal={Journal of Applied Physics},
+  volume={107},
+  number={7},
+  pages={074510},
+  year={2010},
+  publisher={AIP Publishing}
+}
+@book{solymar2009waves,
+  title={Waves in metamaterials},
+  author={Solymar, Laszlo and Shamonina, Ekaterina},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+
 
 @techreport{merkel1973simulation,
   title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
