--- a/result.tex
+++ b/result.tex
@@ -263,6 +263,10 @@ While the change of the cut-wire radius $\rho_w$ relatively weakly reflects in t
 The fundamental resonance in a cut wire has an electric dipole moment only. The resonant magnetic field circulates around the wire and due to its rotational symmetry along the $x$-axis, the magnetic dipole moment is zero. Other structures can support resonances of lower symmetry with regards to the $x$-axis, thus having a magnetic dipole moment.
 
 One of the simplest examples is formed by bending the wire into a "C"-shaped \textit{split-ring resonator} (SRR). To reduce the resonant frequency, capacitor pads can be added to the cut, as shown in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
+
+Apparently the first metamaterial design embedding the SRR was by Pendry et al. from 1999 \cite{pendry1999magnetism}, although
+
+The term of split-ring resonator can be traced decades earlier. The very concept of SRR is at least as old as the Hertz's experiments with the spark-gap transmitter from 1880s.
 \begin{figure}[h] \caption{Variants of the split-ring resonators, viewed from the side perpendicular to the magnetic field: \textbf{(a)} classical SRR, \textbf{(b)} symmetric SRR with two splits, \textbf{(c)} one of the designs of an electric SRRs having a central bar, \textbf{(d)} a similar structure where the central bar was split by a capacitor with pad radius $\rho_c$, allowing to tune the electric resonance} \label{fg_SRR_types} \centering 
 \begin{overpic}[height=0.25\textwidth]{img/drawing_SRRpad.pdf}\put (1,80) {\textbf{(a)}}\end{overpic}\quad\quad\quad
 \begin{overpic}[height=0.25\textwidth]{img/drawing_sSRRpad.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}
@@ -270,7 +274,7 @@ One of the simplest examples is formed by bending the wire into a "C"-shaped \te
 
 %}}}
 \paragraph{Symmetry of the split-ring}%{{{
-The orientation of the splitting of a SRR determines the coupling between its electric and magnetic moment. In particular, when the splitting is on the front or rear side of the ring relative to the wave propagation direction, the resonant fields create also an electric moment, leading to the optical activity.
+The orientation of the splitting in the SRR determines the possible coupling between its electric and magnetic dipoles. In particular, when the splitting is on the front or rear side of the ring relative to the  direction of wave propagation, the magnetic resonance creates also an electric dipole, leading to the optical activity.
 
 Reduced symmetry with regards to the wave propagation may even break the homogenisation based on scattering parameters retrieval, as this procedure assumes that the structure is symmetric, i.e., its reflectance is equal from both sides. Asymmetric structures therefore have properties that can not be matched by any (reciprocal) homogeneous medium. 
 
@@ -315,39 +319,40 @@ With local effective parameters $\eeff(f)$ and $\meff(f)$ appearing to lose thei
 Dispersion curves obtained by the s-parameters method and by the current-driven homogenisation (CDH) are compared in Fig. \ref{fg_cdh5}. Although these methods are fundamentally different, their results overlap, and thus one can assume that the array of symmetric split-ring resonators can be treated as homogeneous with well-defined index of refraction $\Neff(f)$ for the Bloch wave over the whole spectrum. Its local effective parameters $\eeff(f)$ and $\meff(f)$, however, seem to have no useful physical interpretation near the resonances, where the Bloch wavelength is similar to the unit cell size. They remain useful farther from the resonance, though. % todo perhaps add some particular frequency ranges from the Fig.
 
 %}}}
-\paragraph{SRR in a wire array} %{{{
-% todo negative index structure, ref to Fig. 2.11
-
-%}}}
 \paragraph{Variants of split-ring resonators}%{{{
 \begin{figure}[b] \caption{Other variants of split-ring resonators: \textbf{(a)} double SRR, \textbf{(b)} symmetric version thereof, \textbf{(c)} double SRR with cross-connection between the inner and outer rings, \textbf{(d)} illustration of a square resonator} \label{fg_emcSRR_resonances} \centering 
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRpad.pdf}    \put (1,81) {\textbf{(a)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dsSRRpad.pdf}   \put (1,81) {\textbf{(b)}}\end{overpic}\quad
-\begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRcrossed.pdf}\put (1,81) {\textbf{(c)}}\end{overpic}\quad
-\begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRsquare.pdf} \put (-6,81) {\textbf{(d)}}\end{overpic}
+\begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRcrossed.pdf}\put (1,81) {\textbf{(c)}}\end{overpic}\\
+\begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRsquare.pdf} \put (-6,81) {\textbf{(d)}}\end{overpic}\quad
+\begin{overpic}[height=0.22\textwidth]{img/drawing_SRRomega.pdf} \put (1,81) {\textbf{(e)}}\end{overpic}\quad
+\begin{overpic}[height=0.22\textwidth]{img/drawing_sSRRpad_wire.pdf} \put (1,81) {\textbf{(f)}}\end{overpic}\quad
 \end{figure}
-Diverse metamaterial designs based on the SRR principle were developed since the apparently original publication from Pendry et al. from 1999 \cite{pendry1999magnetism}.
-Many SRR designs involve a smaller ring nested inside the original one, as shown in Fig. \ref{fg_dSRR}a,b in the asymmetric and symmetric variants. The long narrow gap between the inner and outer split ring enhances their capacitive coupling. This way, the frequency of the magnetic resonance can be reduced without increase of the overall SRR dimensions. Such designs usually do not need capacitor pads, and can be made by etching on microlitography. 
+Diverse metamaterial designs based on the SRR principle were developed.
+Many SRR designs involve a smaller ring nested inside the original one, as shown in Fig. \ref{fg_dSRR}a,b in the asymmetric and symmetric variants. The long narrow gap between the inner and outer split ring enhances their capacitive coupling. This way, the frequency of the magnetic resonance can be reduced without increase of the overall SRR dimensions. Such designs usually do not need capacitor pads, and can be made by etching or microlitography. 
 
 A modification of this \textit{double split-ring} design includes cross-connection between the inner and outer conductors as in Fig. \ref{fg_dSRR}c; this version also breaks mirror symmetry. 
 
 The square "ring" resonator (Fig. \ref{fg_dSRR}d) is also widely used, without any substantial difference from the round SRR.
 
+The \textit{omega structure} was designed to emulate the operation of a SRR and a wire simultaneously, by interconnecting the ends of a SRR along the $x$-axis (Fig. \ref{fg_dSRR}e).
 
 All SRR structures in Fig. \ref{fg_dSRR} can be made flat in the plane perpendicular to the magnetic field, which facilitates their fabrication. At terahertz and higher frequencies, using a thin metal film should not be much detrimental to the SRR conductivity, since the skin depth caused by eddy currents is often submicroscopic \cite{gibbons2010scalable}.
 
-On the contrary, a similar way of operation is achieved by structures infinite in the direction of the magnetic field. This allows to fabricate magnetic resonators by rolling stripes of a semi-metallised plastic foil, producing a \textit{swiss-roll} metamaterial \cite{gibbons2010scalable}, or by partially sputter-coating a nonconductive fibre by metal. Such structures however seem to exhibit relatively high losses when applied above the microwave range.
+On the contrary, a similar way of operation is achieved by structures infinite in the direction of the magnetic field. This allows to fabricate magnetic resonators by rolling stripes of a semi-metallised plastic foil, producing a \textit{swiss-roll} metamaterial \cite{gibbons2010scalable}, or by partially sputter-coating a polymer fibre by metal \cite{wang2011fiber}. Such structures however seem to exhibit relatively high losses when applied above the microwave range.
 
-Metallic \textit{cut-wire pair}, or also \textit{strip pair}, metamaterial was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator elongated in the direction of the electric field with splittings 
 
-clusters of metallic microspheres
- %note swissroll metamaterial: Gibbons2009 , Wang2010-Fiber_MMs_with_negative_permeability.pdf
+Metallic \textit{cut-wire pair}, or also \textit{strip pair}, metamaterial was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator elongated in the direction of the electric field. The elongation is chosen so that the electric and magnetic resonances should overlap.	
+
+%}}}
+\paragraph{SRR in a wire array} %{{{
+% todo negative index structure, ref to Fig. 2.11
 
 %}}}
 \begin{figure}[t] \caption{Split-ring resonator: %{{{
 		amplitude of \textbf{(a)} reflectance, \textbf{(b)} transmittance, \textbf{(c)} effective index of refraction,  \textbf{(d)} effective permittivity $\eeff$ and \textbf{(e)} effective permeability $\meff$  .   %% todo check params comment=sSRR with wire_resolution=2.000e-06_capacitorr=1.000e-05_splitting=4.000e-06_wirethick=4.000e-06_splitting2=4.000e-06_radius=3.000e-05_simtime=2.000e-10
 Outer ring radius $\rho = 30$ $\mu$m, conductor cross-section $\Delta\rho = 6$ $\mu$m, unit cell size $a=100$ $\mu$m. \\
-Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with a symmetric SRR (double split width $d=2$ $\mu$m) and the same symmetric SRR with wire grid added.  The dispersion curves nor effective parameters for the asymmetric SRR could not be determined by the scattering parameters method. } \label{fg_SRR_principles} \centering \vspace{-3mm} 
+Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with its symmetric variant sSRR (double split width $d=2$ $\mu$m) and the same sSRR with wire grid added. The dispersion curves nor effective parameters for the asymmetric SRR could not be determined by the scattering parameters method. } \label{fg_SRR_principles} \centering \vspace{-3mm} 
 \begin{tabular}{r}
 \begin{overpic}[width=0.85\textwidth]{img-meep/SRR_principles_r.pdf} \put (-1,28) {\textbf{(a)}} \end{overpic}\vspace{-0.060\textwidth}\\
 \begin{overpic}[width=0.85\textwidth]{img-meep/SRR_principles_t.pdf} \put (-1,28) {\textbf{(b)}} \end{overpic}\vspace{-0.060\textwidth}\\
@@ -486,15 +491,16 @@ Provided the auxiliary boundary conditions favor the energy coupling to this add
 \FloatBarrier %====================================================================================================
 \section{Dielectric spheres} % references to ->			
 \paragraph{Mie resonances}%{{{
-Already in Eq. (\ref{}) it was assumed that at higher frequencies, there is no difference in the effect of conduction and polarisation currents. The current conducted around a split-ring resonator has a direct analogy in the polarisation current circulating around an axis of a dielectric sphere. The capacitor in the SRR is then replaced by the distributed capacitance of the whole dielectric. The magnetic dipole moment created by the polarisation current goes through the axis of the sphere. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere, and in general, decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
+Already in Eq. (\ref{}) it was assumed that at higher frequencies, there is no difference in the effect of conduction and polarisation currents. The current conducted around a split-ring resonator has a direct analogy in the polarisation current circulating along the circumference of a dielectric particle, as was noticed by Richtmyer in 1939 \cite{richtmyer1939dielectric}. The capacitor in the SRR is then replaced by the distributed capacitance of the whole dielectric. For spherical dielectric particles, the magnetic dipole moment induced by the polarisation current goes through the sphere axis. The resonance frequency is inversely proportional to the radius $\rho$ of the sphere, and in general, decreases monotonously with the growth of the dielectric permittivity $\epsrl$.
 
-The second resonance has an electric dipole moment. It is similar to the magnetic one except for that now the magnetic field circulates around the axis of the sphere, and the polarisation current forms a dipole. Although the topology of both resonances is the same, the resonance frequency of the magnetic one is lower, since the electric field is then almost entirely confined to the dielectric volume, whereas for the electric resonance, most of the streamlines of the electric field pass through the surrounding air
-
-Infinite number of the higher-order resonances exist, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments, and do not couple to the electromagnetic wave. Dipole moments of many others exist, but are not oriented parallel to the fields of the incident wave. In the spectrum of an array of dielectric spheres, one can clearly identify the remaining resonances as the most prominent magnetic one, electric one, the second magnetic, second electric etc.. The first three resonances from this alternating series are shown in Fig. \ref{fg_Spheres_lossscan}, each manifesting as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance in $\meff(f)$, or vice versa.
+The second resonance has an electric dipole moment. It is similar to the magnetic one, but the electric and magnetic fields exchange their topology: The magnetic field circulates around the axis of the sphere, and the polarisation current forms the electric dipole. Although the topology of both resonances is the same, the resonance frequency of the magnetic one is lower, since the electric field is then almost entirely confined to the dielectric volume, whereas for the electric resonance, most of the streamlines of the electric field have pass through the surrounding air.
 
 An analytic theory of electromagnetic resonances in dielectric spheres and cylinders was developed by Mie. % in 1908? TODO cite
 and therefore they are denoted as \textit{Mie resonances}. 
-The Mie theory was developed for single particles in vacuum, but for high enough dielectric permittivity $\epsrl \gtrsim 50$ the resonant fields are well confined in the dielectric volume and are not much affected by the presence of the neighbouring cells.
+The Mie theory describes the scattering from a single particle surrounded by vacuum, but for high enough dielectric permittivity $\epsrl \gtrsim 50$, the resonant fields are well confined in the dielectric volume and are not much affected by the presence of the neighbouring cells.
+
+Infinite number of the higher-order resonances exist, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments, and do not couple to the electromagnetic wave. Dipole moments of many others exist, but are not oriented parallel to the fields of the incident wave. In the spectrum of an array of dielectric spheres, one can clearly identify the remaining resonances as the most prominent magnetic one, electric one, the second magnetic, second electric etc.. The first three resonances from this alternating series are shown in Fig. \ref{fg_Spheres_lossscan}, each manifesting as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance in $\meff(f)$, or vice versa.
+
 
 %% todo cite vendik, Zhao etc. from the directory
 
@@ -858,39 +864,50 @@ Standing SPP wave
 \FloatBarrier %====================================================================================================
 \section{Fishnet -- metallic sheet with holes} \label{section_fishnet} % references to ->
 %{{{
-%Aperture-array transmission
-Perforated plates \cite[p. 58]{brown1953artificial} % http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
-%Wood anomaly in slit arrays; wave propagation can be also understood through the "hopping model"
+\paragraph{Extraordinary transmission}
+\add{
+	... EOT transmission --- Aperture-array transmission --- Wood anomaly --- standing surface plasmons
 
-% fishnet achieves relatively low losses, since it is optimised for thick and short conduction paths 
+	... The resonance in the metallic mesh has been used as a filter \cite{ulrich1967effective,ulrich1967far}
+	... has been known for half a century \cite{vogel1964transmission}
 
-%% TODO asymmetric cladding --> back reference to expe.tex:79
+	... Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1994resonant}
+	}
+\paragraph{Negative-index structures}
 
 
-%Babinet principle
-% for nearly flat structures, where most of the fields are confined within a slab perpendicular to $\KK$, a
+\add{
+	Perforated plates \cite[p. 58]{brown1953artificial} % http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
+	%Wood anomaly in slit arrays; 
+	...  wave propagation can be also understood through the "hopping model"
 
-%surface plasmons, standing/propagating
+	... fishnet achieves relatively low losses, since it is optimised for thick and short conduction paths 
 
-\cite{yahiaoui2012metallo,rockstuhl2008light}
+	... asymmetric cladding of the sheet suppresses peak transmission, 
+	surface plasmons, standing/propagating
+	--> back reference to expe.tex:79
 
-The resonance in the metallic mesh has been used as a filter 
-\cite{ulrich1967effective,ulrich1967far}
-... has been known for half a century \cite{vogel1964transmission}
+	%Babinet principle
 
-Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1994resonant}
+	... appears hard to be homogenized by the s-parameters \cite{wang2010composite}
 
-Let us note that our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a double-sided circuit board blank, consisting of two 30 $\upmu$m copper foils glued to a plastic. The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs from drilling.
+	% for nearly flat structures, where most of the fields are confined within a slab perpendicular to $\KK$, a
+
+	\cite{yahiaoui2012metallo,rockstuhl2008light}
+	}
+
+\paragraph{Experimental results}
+\add{
+	... spectra of laser-drilled fishnets
+
+	... Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
+
+	... Our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a double-sided circuit board blank, consisting of two 30 $\upmu$m copper foils glued to a plastic. The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs from drilling.
 \begin{figure}[ht] \caption{A drilled fishnet with $500\times 500$ $\mu$m periodicity. The inclined view from the bottom side shows the burrs that were probably responsible for the large difference of the measured and simulated spectra.}  \centering \includegraphics[width=.8\textwidth]{img/fishnet.pdf} \label{fg_fishnet_mechanical} \end{figure}
-
-Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
+	}
 
 
 %}}}
-
-
-
-
 
 
 \FloatBarrier %====================================================================================================
