--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1097,6 +1097,19 @@ Terahertz spectroscopy of ferroelectrics and related materials
 
 /*}}}*/
 % -- Dielectric metamaterials --/*{{{*/
+@article{richtmyer1939dielectric,
+  title={Dielectric resonators},
+  author={Richtmyer, RD},
+  journal={Journal of Applied Physics},
+  volume={10},
+  number={6},
+  pages={391--398},
+  year={1939},
+  publisher={AIP Publishing},
+  abstract={We show that suitably shaped objects made of a dielectric material can function as electrical resonators for high frequency oscillations. We develop the theory of such resonators very briefly and compute their resonant frequencies and losses in some very simple cases. The paper concludes with an observation on the behavior of dielectric wave guides.}
+}
+
+
 @article{peng2007,
   title={Experimental observation of left-handed behavior in an array of standard dielectric resonators},
   author={Peng, Liang and Ran, Lixin and Chen, Hongsheng and Zhang, Haifei and Kong, Jin Au and Grzegorczyk, Tomasz M},
