--- a/result.tex
+++ b/result.tex
@@ -320,13 +320,13 @@ Dispersion curves obtained by the s-parameters method and by the current-driven 
 
 %}}}
 \paragraph{Variants of split-ring resonators}%{{{
-\begin{figure}[b] \caption{Other variants of split-ring resonators: \textbf{(a)} double SRR, \textbf{(b)} symmetric version thereof, \textbf{(c)} double SRR with cross-connection between the inner and outer rings, \textbf{(d)} illustration of a square resonator} \label{fg_emcSRR_resonances} \centering 
+\begin{figure}[b] \caption{Other variants of split-ring resonators: \textbf{(a)} double SRR, \textbf{(b)} symmetric version thereof, \textbf{(c)} double SRR with cross-connection between the inner and outer rings, \textbf{(d)} illustration of a square variant of the double SRR, \textbf{(e)} the "omega" structure aimed to introduce $\Neff'<0$, \textbf{(f)} the cut-wire-pair} \label{fg_emcSRR_resonances} \centering 
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRpad.pdf}    \put (1,81) {\textbf{(a)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dsSRRpad.pdf}   \put (1,81) {\textbf{(b)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRcrossed.pdf}\put (1,81) {\textbf{(c)}}\end{overpic}\\
 \begin{overpic}[height=0.22\textwidth]{img/drawing_dSRRsquare.pdf} \put (-6,81) {\textbf{(d)}}\end{overpic}\quad
 \begin{overpic}[height=0.22\textwidth]{img/drawing_SRRomega.pdf} \put (1,81) {\textbf{(e)}}\end{overpic}\quad
-\begin{overpic}[height=0.22\textwidth]{img/drawing_sSRRpad_wire.pdf} \put (1,81) {\textbf{(f)}}\end{overpic}\quad
+\begin{overpic}[height=0.22\textwidth]{img/drawing_strippair.pdf} \put (1,81) {\textbf{(f)}}\end{overpic}\quad
 \end{figure}
 Diverse metamaterial designs based on the SRR principle were developed.
 Many SRR designs involve a smaller ring nested inside the original one, as shown in Fig. \ref{fg_dSRR}a,b in the asymmetric and symmetric variants. The long narrow gap between the inner and outer split ring enhances their capacitive coupling. This way, the frequency of the magnetic resonance can be reduced without increase of the overall SRR dimensions. Such designs usually do not need capacitor pads, and can be made by etching or microlitography. 
@@ -341,8 +341,7 @@ All SRR structures in Fig. \ref{fg_dSRR} can be made flat in the plane perpendic
 
 On the contrary, a similar way of operation is achieved by structures infinite in the direction of the magnetic field. This allows to fabricate magnetic resonators by rolling stripes of a semi-metallised plastic foil, producing a \textit{swiss-roll} metamaterial \cite{gibbons2010scalable}, or by partially sputter-coating a polymer fibre by metal \cite{wang2011fiber}. Such structures however seem to exhibit relatively high losses when applied above the microwave range.
 
-
-Metallic \textit{cut-wire pair}, or also \textit{strip pair}, metamaterial was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator elongated in the direction of the electric field. The elongation is chosen so that the electric and magnetic resonances should overlap.	
+Metallic \textit{cut-wire pair}, or also \textit{strip pair}, metamaterial depicted in Fig. \ref{fg_dSRR}f, was designed for operation in the infrared or optical range. It can be understood as a split-ring resonator flattened in the direction of the wave vector. The geometry is tuned so that the electric and magnetic resonances overlap.	
 
 %}}}
 \paragraph{SRR in a wire array} %{{{
